<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroud_img"
    android:gravity="center">

    <!-- Header -->
    <Button
        android:id="@+id/closePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:contentDescription="@string/close_page"
        android:text="@string/close"
        android:textColor="@color/pink"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:text="@string/expense_details"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <!-- Activity Name -->
    <TextView
        android:id="@+id/addActivityNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/activity_name"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/addActivityName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:inputType="text"/>

    <!-- Activity Amount -->
    <TextView
        android:id="@+id/addAmountLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/activity_amount"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/addAmount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:inputType="text"/>

    <!-- Activity Description -->
    <TextView
        android:id="@+id/addDescriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_description"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:inputType="text"/>

    <!-- Activity Type Radio Buttons -->
    <TextView
        android:id="@+id/addTypeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/select_type"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        />

    <RadioGroup
        android:id="@+id/activityTypeRadioBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/incomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/income"/>

        <RadioButton
            android:id="@+id/expenseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/expense" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/saveItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save_button"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/deleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_button"
            android:layout_marginStart="20dp"
            android:text="@string/delete"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/black"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>