<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <Button
        android:id="@+id/userSignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:background="@color/pink"
        android:contentDescription="@string/go_to_signup_page"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logInFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_username"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/enter_password"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/button_to_log_in"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@color/pink"
        android:textColor="@color/black"/>

</LinearLayout>