<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_img">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/userProfileName"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:text="@string/hello_user"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addNewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            android:contentDescription="@string/add_new_log_data"
            android:gravity="center"
            android:text="@string/add_item"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:contentDescription="@string/log_out_user"
            android:gravity="center"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- https://developer.android.com/reference/androidx/recyclerview/widget/RecyclerView-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/incomeExpenseRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp" />

</LinearLayout>
