<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/cardItem">

    <!-- 4. https://www.geeksforgeeks.org/cardview-in-android-with-example/ -->

    <TextView
        android:id="@+id/userActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_activity_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/pink"
        android:text="@string/edit_item"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/income_symbol"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/activityAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/income_amount"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/itemID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

</androidx.cardview.widget.CardView>